--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +10,52 @@
   <link rel="icon" type="image/png" href="./images/PorretGaming_Logo_Cut.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
+  <style>
+    #background {
+      background: black;
+      /* overflow: hidden; */
+    }
+
+    #blurred-black {
+      background: black;
+      opacity: 0.7;
+      border-radius: 10px;
+    }
+  </style>
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">
       <img src="./images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 40px; max-height: 100%;">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="./Squiggle.html">Squiggle</a>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Games
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="./Squiggle.html">Squiggle</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            UE Plugins
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">Google Play:
+                Saved Games</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./privacy_policy.html">Squiggle Privacy Policy</a>
         </li>
       </ul>
     </div>
@@ -37,7 +65,11 @@
     <div class="jumbotron" style="margin-top: 50px">
       <h1 class="display-4"><b>Porret Gaming</b></h1>
       </br>
-      <p class="lead">Porret Gaming is a one-person game development company founded by an individual developer who is deeply passionate about creating high-quality, engaging, and unique games. The company's main focus is on procedural generation, a technique used in game development to create game content algorithmically, rather than by hand. This allows for infinite possibilities and keeps the gameplay fresh and exciting with each playthrough.</p>
+      <p class="lead">Porret Gaming is a one-person game development company founded by an individual developer who is
+        deeply passionate about creating high-quality, engaging, and unique games. The company's main focus is on
+        procedural generation, a technique used in game development to create game content algorithmically, rather than
+        by hand. This allows for infinite possibilities and keeps the gameplay fresh and exciting with each playthrough.
+      </p>
     </div>
   </div>
 
@@ -49,80 +81,82 @@
 
   <div class="container">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause=false>
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div id="background">
-                    <img src="images/Squiggle/EasyLevel.png" class="d-block w-100" alt="Image 1">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div id="background">
-                    <img src="images/Squiggle/MainMenu.png" class="d-block w-100" alt="Image 2">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div id="background">
-                    <img src="images/Squiggle/MediumLevel.png" class="d-block w-100" alt="Image 3">
-                </div>
-            </div>
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div id="background">
+            <img src="images/Squiggle/EasyLevel.png" class="d-block w-100" alt="Image 1" style="opacity: 0.8">
+          </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+          <div id="background">
+            <img src="images/Squiggle/MainMenu.png" class="d-block w-100" alt="Image 2" style="opacity: 0.8">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div id="background">
+            <img src="images/Squiggle/MediumLevel.png" class="d-block w-100" alt="Image 3" style="opacity: 0.8">
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
 
-        <a href="Squiggle.html">
-            <div class="overlay-text">
-                <h1>Squiggle</h1>
-            </div>
-        </a>
+      <a href="Squiggle.html">
+        <div class="overlay-text">
+          <h1>Squiggle</h1>
+        </div>
+      </a>
     </div>
   </div>
 
-  <!-- <div class="container">
+  <div class="container">
     <div class="jumbotron jumbotron-sm" style="margin-top: 50px">
       <h1 class="display-4"><b>Plugins</b></h1>
     </div>
   </div>
 
   <div class="container">
-    <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause=false>
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div id="background">
-                    <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" class="d-block w-100" alt="Image 1">
-                </div>
-            </div>
+    <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel" data-interval="3000"
+      data-pause=false>
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div id="background">
+            <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" class="d-block w-100" alt="Image 1"
+              style="opacity: 0.8">
+          </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
 
-        <a href="plugins/google-play-services/saved-games/overview.html">
-            <div class="overlay-text">
-              <h2 style="white-space: nowrap; font-size: 5vw;">Google Play Services:</h2>
-              <h3 style="white-space: nowrap; font-size: 3vw;">Saved Games</h3>
-            </div>
-        </a>
+      <a href="plugins/google-play-services/saved-games/overview.html">
+        <div class="overlay-text">
+          <h2 style="white-space: nowrap; font-size: 5vw;">Google Play Services:</h2>
+          <h3 style="white-space: nowrap; font-size: 3vw;">Saved Games</h3>
+        </div>
+      </a>
     </div>
-  </div> -->
+  </div>
 
   <div class="container">
     <div class="jumbotron" style="margin-top: 50px">
@@ -156,7 +190,7 @@
     </div>
     <div class="bg-dark py-2">
       <div class="container text-center">
-        <p class="text-light mb-0">Copyright &copy; 2023 
+        <p class="text-light mb-0">Copyright &copy; 2023
           <a href="#" class="text-light">Porret Gaming</a>
         </p>
       </div>
@@ -167,4 +201,5 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
