--- a/plugins/google-play-services/saved-games/conflict_resolution.html
+++ b/plugins/google-play-services/saved-games/conflict_resolution.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-  <title>UE4 Plugin | Saved Games</title>
-  <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../../style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
+    <title>UE Plugin | Saved Games</title>
+    <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../style.css">
 </head>
+
 <body>
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../../../index.html">
             <img src="../../../images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 40px; max-height: 100%;">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../Squiggle.html">Squiggle</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Games
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="../../../Squiggle.html">Squiggle</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        UE Plugins
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="./overview.html">Google Play: Saved Games</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../../../contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../privacy_policy.html">Squiggle Privacy Policy</a>
                 </li>
             </ul>
         </div>
@@ -37,7 +52,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                <div class="sidebar-sticky" style = "margin-top: 20px">
+                <div class="sidebar-sticky" style="margin-top: 20px">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link disabled">Developer Guidelines</a>
@@ -82,7 +97,7 @@
                                 Conflict Resolution
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
@@ -106,7 +121,7 @@
                                 Snapshot Error
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
                         </li>
@@ -118,29 +133,41 @@
                     </ul>
                 </div>
             </nav>
-      
+
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Conflict Resolution</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            This is an synchronous function which allows you to define the method to be used during manual conflict resolution.
+                            This is an synchronous function which allows you to define the method to be used during
+                            manual conflict resolution.
                         </p>
                         <p class="content">
-                            The only parameter is a function defining how to manually resolve conflicts encountered when making use of the <a href="saving_game.html">Saving a Game</a> and <a href="loading_game.html">Loading a Game</a> blueprint nodes.
-                            The function provided will be used when <span style="font-weight: 500">RESOLUTION_POLICY_MANUAL</span> is selected as a Conflict <a href="resolution_policy.html">Resolution Policy</a>.
-                            This function only needs to be called once at game startup before saving and loading any games.
+                            The only parameter is a function defining how to manually resolve conflicts encountered when
+                            making use of the <a href="saving_game.html">Saving a Game</a> and <a
+                                href="loading_game.html">Loading a Game</a> blueprint nodes.
+                            The function provided will be used when <span
+                                style="font-weight: 500">RESOLUTION_POLICY_MANUAL</span> is selected as a Conflict <a
+                                href="resolution_policy.html">Resolution Policy</a>.
+                            This function only needs to be called once at game startup before saving and loading any
+                            games.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            If this blueprint node is not used and <span style="font-weight: 500">RESOLUTION_POLICY_MANUAL</span> is selected, <span style="font-weight: 500">RESOLUTION_POLICY_MOST_RECENTLY_MODIFIED</span> will be used instead.
+                            If this blueprint node is not used and <span
+                                style="font-weight: 500">RESOLUTION_POLICY_MANUAL</span> is selected, <span
+                                style="font-weight: 500">RESOLUTION_POLICY_MOST_RECENTLY_MODIFIED</span> will be used
+                            instead.
                         </p>
                     </div>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/SavedGames/SavedGames_Plugin_SetManualConflictResolution.png" style="max-width: 70%;">
+                        <img src="../../../images/SavedGames/SavedGames_Plugin_SetManualConflictResolution.png"
+                            style="max-width: 70%;">
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
@@ -150,87 +177,105 @@
                             <b>Manual Conflict Resolution Stategy</b>
                         </p>
                         <p class="content">
-                            This is a delegate has two <a href="snapshot.html">Snapshot</a> parameters as inputs and requires one <a href="snapshot.html">Snapshot</a> to be returned.
-                            The input parameters provided are the cloud version and local version of the snapshot. The output parameter is the final version to be used to resolve the conflict and load/save.
+                            This is a delegate has two <a href="snapshot.html">Snapshot</a> parameters as inputs and
+                            requires one <a href="snapshot.html">Snapshot</a> to be returned.
+                            The input parameters provided are the cloud version and local version of the snapshot. The
+                            output parameter is the final version to be used to resolve the conflict and load/save.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             <span style="font-weight: 500">Note:</span></br>
-                            When dragging off this pin to create a function, you need to use the <span style="font-weight: 500">Event Dispatchers</span> dropdown and then select the <span style="font-weight: 500">Create Event</span> option.
-                            Once this option is selected, it will create a blueprint node to create an event, you can then use its dropdown to <span style="font-weight: 500">[Create a matching function]</span> with the matching function signature.
+                            When dragging off this pin to create a function, you need to use the <span
+                                style="font-weight: 500">Event Dispatchers</span> dropdown and then select the <span
+                                style="font-weight: 500">Create Event</span> option.
+                            Once this option is selected, it will create a blueprint node to create an event, you can
+                            then use its dropdown to <span style="font-weight: 500">[Create a matching function]</span>
+                            with the matching function signature.
                         </p>
                     </div>
                 </div>
                 <div style="margin-top: 50px">
                     <h1 class="h3">Example</h1>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
                     <div class="info">
                         <p class="content">
                             <b>Creating a new Snapshot</b>
                         </p>
                         <p class="content">
-                            In the event that you want to combine both <a href="snapshot.html">Snapshot</a> parameters you can break each struct and create a new one with the desired values.</br>
-                            To create an entirely new snapshot, you can create two local variables within your function of type <a href="snapshot.html">Snapshot</a> and <a href="snapshot_metadata.html">SnapshotMetadata</a>.
+                            In the event that you want to combine both <a href="snapshot.html">Snapshot</a> parameters
+                            you can break each struct and create a new one with the desired values.</br>
+                            To create an entirely new snapshot, you can create two local variables within your function
+                            of type <a href="snapshot.html">Snapshot</a> and <a
+                                href="snapshot_metadata.html">SnapshotMetadata</a>.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            In the below example, we are combining the <span style="font-weight: 500">PlayedTime</span> and <span style="font-weight: 500">ProgressValue</span> values within the <a href="snapshot_metadata.html">SnapshotMetadata</a> and choosing the Local Save Game Object. </br>
-                            You can simply reuse this pattern with any values the <a href="snapshot.html">Snapshot</a> structure provides.
+                            In the below example, we are combining the <span style="font-weight: 500">PlayedTime</span>
+                            and <span style="font-weight: 500">ProgressValue</span> values within the <a
+                                href="snapshot_metadata.html">SnapshotMetadata</a> and choosing the Local Save Game
+                            Object. </br>
+                            You can simply reuse this pattern with any values the <a href="snapshot.html">Snapshot</a>
+                            structure provides.
                         </p>
                     </div>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/SavedGames/SavedGames_Plugin_ConflictExample.png" style="max-width: 90%;" data-toggle="modal" data-target="#Modal1">
+                        <img src="../../../images/SavedGames/SavedGames_Plugin_ConflictExample.png"
+                            style="max-width: 90%;" data-toggle="modal" data-target="#Modal1">
                     </div>
                 </div>
                 <!-- Modal -->
                 <div class="modal fade" id="Modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div id="modalBody1">
-                        <div class="modal-body">
-                            <img id="modal1-image" src="../../../images/SavedGames/SavedGames_Plugin_ConflictExample.png" alt="Your Image" >
+                        <div id="modalBody1">
+                            <div class="modal-body">
+                                <img id="modal1-image"
+                                    src="../../../images/SavedGames/SavedGames_Plugin_ConflictExample.png"
+                                    alt="Your Image">
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
                 <div style="margin-bottom: 150px">
                 </div>
             </main>
         </div>
-      </div>
-    
+    </div>
+
     <footer class="bg-dark text-light">
-    <div class="container py-4">
-        <div class="row">
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Links</b></h5>
-                <ul class="list-unstyled mb-0">
-                    <li><a href="../../../index.html" class="text-light">Home</a></li>
-                    <li><a href="../../../contact.html" class="text-light">Contact</a></li>
-                    <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Contact</b></h5>
-                <ul class="list-unstyled mb-0">
-                <li class="text-light">Email: porretgaming@gmail.com</li>
-                </ul>
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Links</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="../../../index.html" class="text-light">Home</a></li>
+                        <li><a href="../../../contact.html" class="text-light">Contact</a></li>
+                        <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Contact</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li class="text-light">Email: porretgaming@gmail.com</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="bg-dark py-2">
-        <div class="container text-center">
-        <p class="text-light mb-0">Copyright &copy; 2023 
-            <a href="#" class="text-light">Porret Gaming</a>
-        </p>
+        <div class="bg-dark py-2">
+            <div class="container text-center">
+                <p class="text-light mb-0">Copyright &copy; 2023
+                    <a href="#" class="text-light">Porret Gaming</a>
+                </p>
+            </div>
         </div>
-    </div>
     </footer>
 
     <script>
         var modal = document.getElementById("modalBody1");
         var img = document.getElementById("modal1-image");
-   
+
         modal.style.width = img.width + "px";
         modal.style.height = img.height + "px";
     </script>
