--- a/plugins/google-play-services/saved-games/external-ui.html
+++ b/plugins/google-play-services/saved-games/external-ui.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-  <title>UE4 Plugin | Saved Games</title>
-  <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../../style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
+    <title>UE Plugin | Saved Games</title>
+    <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../style.css">
 </head>
+
 <body>
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../../../index.html">
             <img src="../../../images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 40px; max-height: 100%;">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../Squiggle.html">Squiggle</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Games
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="../../../Squiggle.html">Squiggle</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        UE Plugins
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="./overview.html">Google Play: Saved Games</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../../../contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../privacy_policy.html">Squiggle Privacy Policy</a>
                 </li>
             </ul>
         </div>
@@ -37,7 +52,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                <div class="sidebar-sticky" style = "margin-top: 20px">
+                <div class="sidebar-sticky" style="margin-top: 20px">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link disabled">Developer Guidelines</a>
@@ -82,7 +97,7 @@
                                 Conflict Resolution
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
@@ -106,7 +121,7 @@
                                 Snapshot Error
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
                         </li>
@@ -118,20 +133,25 @@
                     </ul>
                 </div>
             </nav>
-      
+
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">External Selection UI</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            This is an asynchronous function which pulls up the Google's provided Selection User Interface.</br>
-                            When called with various configurable parameters shown below, this will present the player with a screen to view their Saved Games.
+                            This is an asynchronous function which pulls up the Google's provided Selection User
+                            Interface.</br>
+                            When called with various configurable parameters shown below, this will present the player
+                            with a screen to view their Saved Games.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The parameters include the Title of the UI, number of saved games to show and whether they can add or delete save games.
-                            </br>Once the asynchronous operation has completed, one of three delegates will be called to handle when a user adds a new saved game, deletes a game or a failure has occured.
+                            The parameters include the Title of the UI, number of saved games to show and whether they
+                            can add or delete save games.
+                            </br>Once the asynchronous operation has completed, one of three delegates will be called to
+                            handle when a user adds a new saved game, deletes a game or a failure has occured.
                         </p>
                     </div>
                 </div>
@@ -161,7 +181,8 @@
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 The number of saved games to show in the external UI in order of recently modified.
-                                You can provide a value of <span style="font-weight: 500">-1</span> to show all saved games.
+                                You can provide a value of <span style="font-weight: 500">-1</span> to show all saved
+                                games.
                             </p>
                         </div>
                     </div>
@@ -174,8 +195,10 @@
                                 <b>Allow Add</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A boolean value indicating whether or not a button enabling the user to add a new saved game shows.
-                                This button will call the delegate <span style="font-weight: 500">On Add New Saved Game</span> described below.
+                                A boolean value indicating whether or not a button enabling the user to add a new saved
+                                game shows.
+                                This button will call the delegate <span style="font-weight: 500">On Add New Saved
+                                    Game</span> described below.
                             </p>
                         </div>
                     </div>
@@ -188,8 +211,10 @@
                                 <b>Allow Delete</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                a boolean value indicating whether or not an option is available to remove saved games from the list presented to the user.
-                                When true, an option to delete the saved game will be present on each save game record shown to the user.
+                                a boolean value indicating whether or not an option is available to remove saved games
+                                from the list presented to the user.
+                                When true, an option to delete the saved game will be present on each save game record
+                                shown to the user.
                                 When this button is used, it will automatically delete the Snapshot in the server.
                             </p>
                         </div>
@@ -204,8 +229,12 @@
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A delegate that will be called when the add button is pressed on the external UI.
-                                This delegate can only be called if the <span style="font-weight: 500">Allow Add</span> parameter is set to true and the player uses the generated add button on the external UI.
-                                The delegate has no parameters and will not automatically create a Snapshot for you, you will have to make use of the <a href="saving_game.html">Saving a Game</a> blueprint node in conjunction with this delegate.
+                                This delegate can only be called if the <span style="font-weight: 500">Allow Add</span>
+                                parameter is set to true and the player uses the generated add button on the external
+                                UI.
+                                The delegate has no parameters and will not automatically create a Snapshot for you, you
+                                will have to make use of the <a href="saving_game.html">Saving a Game</a> blueprint node
+                                in conjunction with this delegate.
                                 You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
@@ -220,8 +249,11 @@
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A delegate that will be called if the player selects a snapshot presented in the UI.
-                                The delegate has a <span style="font-weight: 500">Slot Name</span> as a parameter and will not automatically load a game for you.
-                                The <span style="font-weight: 500">Slot Name</span> parameter can be used in conjunction with the <a href="loading_game.html">Loading a Game</a> blueprint node to load the game selected.
+                                The delegate has a <span style="font-weight: 500">Slot Name</span> as a parameter and
+                                will not automatically load a game for you.
+                                The <span style="font-weight: 500">Slot Name</span> parameter can be used in conjunction
+                                with the <a href="loading_game.html">Loading a Game</a> blueprint node to load the game
+                                selected.
                                 You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
@@ -235,8 +267,10 @@
                                 <b>On Failure</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called if there is an error generating and displaying the external UI.
-                                The delegate will produce an <a href="snapshot_error.html">Snapshot Error</a> type for the developer to handle appropriately.
+                                A delegate that will be called if there is an error generating and displaying the
+                                external UI.
+                                The delegate will produce an <a href="snapshot_error.html">Snapshot Error</a> type for
+                                the developer to handle appropriately.
                                 You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
@@ -246,34 +280,34 @@
                 </div>
             </main>
         </div>
-      </div>
-    
+    </div>
+
     <footer class="bg-dark text-light">
-    <div class="container py-4">
-        <div class="row">
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Links</b></h5>
-                <ul class="list-unstyled mb-0">
-                    <li><a href="../../../index.html" class="text-light">Home</a></li>
-                    <li><a href="../../../contact.html" class="text-light">Contact</a></li>
-                    <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Contact</b></h5>
-                <ul class="list-unstyled mb-0">
-                <li class="text-light">Email: porretgaming@gmail.com</li>
-                </ul>
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Links</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="../../../index.html" class="text-light">Home</a></li>
+                        <li><a href="../../../contact.html" class="text-light">Contact</a></li>
+                        <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Contact</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li class="text-light">Email: porretgaming@gmail.com</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="bg-dark py-2">
-        <div class="container text-center">
-        <p class="text-light mb-0">Copyright &copy; 2023 
-            <a href="#" class="text-light">Porret Gaming</a>
-        </p>
+        <div class="bg-dark py-2">
+            <div class="container text-center">
+                <p class="text-light mb-0">Copyright &copy; 2023
+                    <a href="#" class="text-light">Porret Gaming</a>
+                </p>
+            </div>
         </div>
-    </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
