--- a/plugins/google-play-services/saved-games/overview.html
+++ b/plugins/google-play-services/saved-games/overview.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-  <title>UE4 Plugin | Saved Games</title>
-  <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../../style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
+    <title>UE Plugin | Saved Games</title>
+    <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../style.css">
 </head>
+
 <body>
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../../../index.html">
             <img src="../../../images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 40px; max-height: 100%;">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../Squiggle.html">Squiggle</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Games
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="../../../Squiggle.html">Squiggle</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        UE Plugins
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="./overview.html">Google Play: Saved Games</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../../../contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../privacy_policy.html">Squiggle Privacy Policy</a>
                 </li>
             </ul>
         </div>
@@ -37,7 +52,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                <div class="sidebar-sticky" style = "margin-top: 20px">
+                <div class="sidebar-sticky" style="margin-top: 20px">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link disabled">Developer Guidelines</a>
@@ -82,7 +97,7 @@
                                 Conflict Resolution
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
@@ -106,7 +121,7 @@
                                 Snapshot Error
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
                         </li>
@@ -120,9 +135,10 @@
                     </div>
                 </div>
             </nav>
-      
+
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Overview</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
@@ -131,14 +147,21 @@
                             <b>The Google Play Service: Saved Games</b>
                         </p>
                         <p class="content">
-                            The Saved Games service is a feature provided by Google Play Services that allows developers to save and manage game snapshots in the cloud.
-                            With this service, developers can save the game state at any point in time, enabling their players to continue playing from that exact point in the future from any compatible device.
+                            The Saved Games service is a feature provided by Google Play Services that allows developers
+                            to save and manage game snapshots in the cloud.
+                            With this service, developers can save the game state at any point in time, enabling their
+                            players to continue playing from that exact point in the future from any compatible device.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The Saved Games service provides a reliable and scalable solution for game developers to implement snapshot functionality in their games.
-                            It also supports cross-platform snapshotting, allowing games to save and resume their game progress across multiple devices.
-                            In addition to saving game state, the service provides features such as snapshot management, where developers can enable players to view and manage all of their saved games.
-                            Snapshots can also be deleted and modified at any time, providing developers with full control over their players saved game data, with the possibility of exposing this functionality to the players themselves.
+                            The Saved Games service provides a reliable and scalable solution for game developers to
+                            implement snapshot functionality in their games.
+                            It also supports cross-platform snapshotting, allowing games to save and resume their game
+                            progress across multiple devices.
+                            In addition to saving game state, the service provides features such as snapshot management,
+                            where developers can enable players to view and manage all of their saved games.
+                            Snapshots can also be deleted and modified at any time, providing developers with full
+                            control over their players saved game data, with the possibility of exposing this
+                            functionality to the players themselves.
                         </p>
                     </div>
                     <div class="info" style="margin-top: 20px">
@@ -146,56 +169,68 @@
                             <b>The Unreal Engine Plugin</b>
                         </p>
                         <p class="content">
-                            This Unreal Engine plugin for the Snapshots Saved Game service is designed to expose the service's features to blueprints, making it easier for game developers to integrate the service into their games.
-                            With the plugin, developers can easily create, save, load game snapshots, and also retrieve information about snapshots and save states.
-                            The plugin provides a user-friendly interface within the Unreal Engine editor, allowing developers to connect to the service easily.
-                            By integrating the Snapshots Saved Game Service into their games using this plugin, developers can offer players a seamless and easy-to-use save and load system that is reliable and secure.
+                            This Unreal Engine plugin for the Snapshots Saved Game service is designed to expose the
+                            service's features to blueprints, making it easier for game developers to integrate the
+                            service into their games.
+                            With the plugin, developers can easily create, save, load game snapshots, and also retrieve
+                            information about snapshots and save states.
+                            The plugin provides a user-friendly interface within the Unreal Engine editor, allowing
+                            developers to connect to the service easily.
+                            By integrating the Snapshots Saved Game Service into their games using this plugin,
+                            developers can offer players a seamless and easy-to-use save and load system that is
+                            reliable and secure.
                         </p>
                         <p class="content">
-                            The plugin makes use of <span style="font-weight: 500">no additional libraries or imports</span>, but instead makes use of the built in google play services SDK already within Unreal Engine, meaning the size of your <span style="font-weight: 500">game bundle will hardly increase in size</span>.
+                            The plugin makes use of <span style="font-weight: 500">no additional libraries or
+                                imports</span>, but instead makes use of the built in google play services SDK already
+                            within Unreal Engine, meaning the size of your <span style="font-weight: 500">game bundle
+                                will hardly increase in size</span>.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The plugin does not interfere with any of Unreal Engine's existing functionality, meaning <span style="font-weight: 500">no compilation conflicts</span> with other Unreal Engine provided libraries can occur and <span style="font-weight: 500">all existing Google Play Services provided by Unreal Engine will work as expected</span>.
+                            The plugin does not interfere with any of Unreal Engine's existing functionality, meaning
+                            <span style="font-weight: 500">no compilation conflicts</span> with other Unreal Engine
+                            provided libraries can occur and <span style="font-weight: 500">all existing Google Play
+                                Services provided by Unreal Engine will work as expected</span>.
                         </p>
                     </div>
                     <!-- <div class="info" style="margin-top: 20px"> -->
-                        <div style="display: flex; justify-content: center; align-items: center;">
-                            <img src="../../../images/SavedGames/SavedGames_Plugin_AllNodes.png" style="width: 95%">
-                        </div>
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/SavedGames/SavedGames_Plugin_AllNodes.png" style="width: 95%">
+                    </div>
                     <!-- </div> -->
                     <div style="margin-bottom: 150px">
                     </div>
                 </div>
             </main>
         </div>
-      </div>
-    
+    </div>
+
     <footer class="bg-dark text-light">
-    <div class="container py-4">
-        <div class="row">
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Links</b></h5>
-                <ul class="list-unstyled mb-0">
-                    <li><a href="../../../index.html" class="text-light">Home</a></li>
-                    <li><a href="../../../contact.html" class="text-light">Contact</a></li>
-                    <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Contact</b></h5>
-                <ul class="list-unstyled mb-0">
-                <li class="text-light">Email: porretgaming@gmail.com</li>
-                </ul>
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Links</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="../../../index.html" class="text-light">Home</a></li>
+                        <li><a href="../../../contact.html" class="text-light">Contact</a></li>
+                        <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Contact</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li class="text-light">Email: porretgaming@gmail.com</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="bg-dark py-2">
-        <div class="container text-center">
-        <p class="text-light mb-0">Copyright &copy; 2023 
-            <a href="#" class="text-light">Porret Gaming</a>
-        </p>
+        <div class="bg-dark py-2">
+            <div class="container text-center">
+                <p class="text-light mb-0">Copyright &copy; 2023
+                    <a href="#" class="text-light">Porret Gaming</a>
+                </p>
+            </div>
         </div>
-    </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
