--- a/plugins/google-play-services/saved-games/snapshot.html
+++ b/plugins/google-play-services/saved-games/snapshot.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-  <title>UE4 Plugin | Saved Games</title>
-  <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../../style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
+    <title>UE Plugin | Saved Games</title>
+    <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../style.css">
 </head>
+
 <body>
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../../../index.html">
             <img src="../../../images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 40px; max-height: 100%;">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../Squiggle.html">Squiggle</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Games
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="../../../Squiggle.html">Squiggle</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        UE Plugins
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="./overview.html">Google Play: Saved Games</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../../../contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../../../privacy_policy.html">Squiggle Privacy Policy</a>
                 </li>
             </ul>
         </div>
@@ -37,7 +52,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                <div class="sidebar-sticky" style = "margin-top: 20px">
+                <div class="sidebar-sticky" style="margin-top: 20px">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link disabled">Developer Guidelines</a>
@@ -82,7 +97,7 @@
                                 Conflict Resolution
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
@@ -106,7 +121,7 @@
                                 Snapshot Error
                             </a>
                         </li>
-                        <hr/>
+                        <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
                         </li>
@@ -118,36 +133,45 @@
                     </ul>
                 </div>
             </nav>
-      
+
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Snapshot</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="container" style="margin-left: 0px; padding-left: 0px;">
                         <div class="info">
                             <p class="content">
-                                The Snapshot struct is designed to easily group a Snapshot's binary game data with its corresponding <a href="snapshot_metadata.html>">SnapshotMetadata</a>.
+                                The Snapshot struct is designed to easily group a Snapshot's binary game data with its
+                                corresponding <a href="snapshot_metadata.html>">SnapshotMetadata</a>.
                             </p>
                             <p class="content">
-                                The read and write fields of the SnapshotMetadata struct are the SaveGameObject itself as well as the <a href="snapshot_metadata.html>">SnapshotMetadata</a>.
-                                This struct is only used when <span style="font-weight: 500">RESOLUTION_POLICY_MANUAL</span> is selected as a <a href="resolution_policy.html">Resolution Policy</a>.
-                                This will be the struct used as input parameters as well as the return type of your custom function defined in your manual <a href="conflict_resolution.html">Conflict Resolution</a> function.
+                                The read and write fields of the SnapshotMetadata struct are the SaveGameObject itself
+                                as well as the <a href="snapshot_metadata.html>">SnapshotMetadata</a>.
+                                This struct is only used when <span
+                                    style="font-weight: 500">RESOLUTION_POLICY_MANUAL</span> is selected as a <a
+                                    href="resolution_policy.html">Resolution Policy</a>.
+                                This will be the struct used as input parameters as well as the return type of your
+                                custom function defined in your manual <a href="conflict_resolution.html">Conflict
+                                    Resolution</a> function.
                             </p>
                         </div>
                     </div>
                     <div class="container" style="margin-left: 0px; padding-left: 0px;">
                         <div style="display: flex; align-items: center;">
-                            <img src="../../../images/SavedGames/SavedGames_Object_Snapshot.png" style="max-width: 70%;">
+                            <img src="../../../images/SavedGames/SavedGames_Object_Snapshot.png"
+                                style="max-width: 70%;">
                         </div>
                     </div>
                     <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
-                        <table class="table table-striped table-bordered" style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                        <table class="table table-striped table-bordered"
+                            style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                             <thead class="thead-dark">
                                 <tr>
-                                <th>Field</th>
-                                <th>Type</th>
-                                <th>Description</th>
+                                    <th>Field</th>
+                                    <th>Type</th>
+                                    <th>Description</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -175,34 +199,34 @@
                 </div>
             </main>
         </div>
-      </div>
-    
+    </div>
+
     <footer class="bg-dark text-light">
-    <div class="container py-4">
-        <div class="row">
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Links</b></h5>
-                <ul class="list-unstyled mb-0">
-                    <li><a href="../../../index.html" class="text-light">Home</a></li>
-                    <li><a href="../../../contact.html" class="text-light">Contact</a></li>
-                    <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="col-md-6 mb-4 mb-md-0">
-                <h5><b>Contact</b></h5>
-                <ul class="list-unstyled mb-0">
-                <li class="text-light">Email: porretgaming@gmail.com</li>
-                </ul>
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Links</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="../../../index.html" class="text-light">Home</a></li>
+                        <li><a href="../../../contact.html" class="text-light">Contact</a></li>
+                        <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 mb-4 mb-md-0">
+                    <h5><b>Contact</b></h5>
+                    <ul class="list-unstyled mb-0">
+                        <li class="text-light">Email: porretgaming@gmail.com</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="bg-dark py-2">
-        <div class="container text-center">
-        <p class="text-light mb-0">Copyright &copy; 2023 
-            <a href="#" class="text-light">Porret Gaming</a>
-        </p>
+        <div class="bg-dark py-2">
+            <div class="container text-center">
+                <p class="text-light mb-0">Copyright &copy; 2023
+                    <a href="#" class="text-light">Porret Gaming</a>
+                </p>
+            </div>
         </div>
-    </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
